--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@
     <!-- A Motion decoupled Aerial Robotic Manipulator for Better Inspection -->
     <tr>
       <td width="40%" valign="top" align="center"><a href=" ">
-      <video playsinline autoplay loop muted src="images/iros2021.gif" poster="./images/iros2021.gif" alt="sym" width="90%" style="padding-top:0px;padding-bottom:0px;border-radius:15px;"></video>
+      <video playsinline autoplay loop muted src="images/iros2021.mp4" poster="./images/loading-icon.gif" alt="sym" width="90%" style="padding-top:0px;padding-bottom:0px;border-radius:15px;"></video>
       </a></td>
 
       <td width="60%" valign="top">
