--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
     </p>
 
     <tr>
-      <td width="30%" valign="top"><a href="images/pengrui.jpg"><img src="images/pengrui.jpg" width="100%" style="border-radius:15px"></a>
+      <td width="30%" valign="top"><img src="images/pengrui.jpg" width="100%" style="border-radius:15px"> 
       <p align=center>
         | <a href="data/pengrui_CV.pdf">CV</a> |
         <a href="mailto:pengrui-rio@connect.hku.hk">Email</a> |
@@ -129,7 +129,7 @@
     <!-- A Tendon-driven Continuum Manipulator with Robust Shape Estimation by Fusion of Multi-IMUs -->
     <tr>
       <td width="40%" valign="top" align="center"><a href=" ">
-      <video playsinline autoplay loop muted src="images/Origami_threeSec.mp4" poster="/images/loading-icon.gif" alt="sym" width="90%" style="padding-top:0px;padding-bottom:0px;border-radius:15px;"></video>
+      <video playsinline autoplay loop muted src="images/origami_imu.gif" poster="/images/origami_imu.gif" alt="sym" width="90%" style="padding-top:0px;padding-bottom:0px;border-radius:15px;"></video>
       </a></td>
 
       <td width="60%" valign="top">
@@ -140,7 +140,7 @@
         </p>
 
         <div class="paper" id="AeCoM">
-        <a href=" ">github</a> |
+        <!-- <a href=" ">github</a> | -->
         <a href=" ">pdf</a> |
         <a href=" ">video</a>
         </div>
@@ -150,7 +150,7 @@
     <!-- Flying Elephant Trunk: A dexterous and compliant aerial manipulator for complex cluttered and constrained environments -->
     <tr>
       <td width="40%" valign="top" align="center"><a href=" ">
-      <video playsinline autoplay loop muted src="images/flying_elephant.mp4" poster="/images/loading-icon.gif" alt="sym" width="90%" style="padding-top:0px;padding-bottom:0px;border-radius:15px;"></video>
+      <video playsinline autoplay loop muted src="images/flying_elephant.gif" poster="/images/flying_elephant.gif" alt="sym" width="90%" style="padding-top:0px;padding-bottom:0px;border-radius:15px;"></video>
       </a></td>
 
       <td width="60%" valign="top">
@@ -161,7 +161,7 @@
         </p>
 
         <div class="paper" id="AeCoM">
-        <a href=" ">github</a> |
+        <!-- <a href=" ">github</a> | -->
         <a href=" ">pdf</a> |
         <a href=" ">video</a>
         </div>
@@ -171,7 +171,7 @@
     <!-- AeCoM: An Aerial Continuum Manipulator With IMU-Based Kinematic Modeling and Tendon-Slacking Prevention -->
     <tr>
       <td width="40%" valign="top" align="center"><a href="https://github.com/arclab-hku/AeCoM_Aerial-Continuum-Manipulator">
-      <video playsinline autoplay loop muted src="images/aecom_80deg_grasping.mp4" poster="./images/loading-icon.gif" alt="sym" width="90%" style="padding-top:0px;padding-bottom:0px;border-radius:15px;"></video>
+      <video playsinline autoplay loop muted src="images/aecom.gif" poster="./images/aecom.gif" alt="sym" width="90%" style="padding-top:0px;padding-bottom:0px;border-radius:15px;"></video>
       </a></td>
 
       <td width="60%" valign="top">
@@ -202,8 +202,8 @@
         IEEE/RSJ International Conference on Intelligent Robots and Systems (IROS) - 2021<br>
         </p>
 
-        <div class="paper" id="AeCoM">
-        <a href=" ">github</a> |
+        <div class="paper" >
+        <!-- <a href=" ">github</a> | -->
         <a href=" ">pdf</a> |
         <a href=" ">video</a>
         </div>
@@ -223,7 +223,7 @@
         IEEE Robotics and Automation Letters - 2021<br>
         </p>
 
-        <div class="paper" id="AeCoM">
+        <div class="paper" >
         <a href="https://github.com/pengrui-rio/welding-robot">github</a> |
         <a href=" ">pdf</a> |
         <a href=" ">video</a>
@@ -235,7 +235,7 @@
     <!-- Fast Adaptive Complementary Filter for Quadrotor Attitude Estimation During Aggressive Maneuvers -->
     <tr>
       <td width="40%" valign="top" align="center"><a href="https://github.com/pengrui-rio/welding-robot">
-      <video playsinline autoplay loop muted src="images/aecom_80deg_grasping.mp4" poster="./images/loading-icon.gif" alt="sym" width="90%" style="padding-top:0px;padding-bottom:0px;border-radius:15px;"></video>
+      <video playsinline autoplay loop muted src="images/icuas2021.gif" poster="./images/icuas2021.gif" alt="sym" width="90%" style="padding-top:0px;padding-bottom:0px;border-radius:15px;"></video>
       </a></td>
 
       <td width="60%" valign="top">
@@ -246,7 +246,7 @@
         </p>
 
         <div class="paper"  >
-        <a href=" ">github</a> |
+        <!-- <a href=" ">github</a> | -->
         <a href=" ">pdf</a> |
         <a href=" ">video</a>
         </div>
@@ -256,7 +256,7 @@
     <!-- A Point Cloud-Based Method for Automatic Groove Detection and Trajectory Generation of Robotic Arc Welding Tasks -->
     <tr>
       <td width="40%" valign="top" align="center"><a href="https://github.com/pengrui-rio/welding-robot">
-      <video playsinline autoplay loop muted src="images/aecom_80deg_grasping.mp4" poster="./images/loading-icon.gif" alt="sym" width="90%" style="padding-top:0px;padding-bottom:0px;border-radius:15px;"></video>
+      <video playsinline autoplay loop muted src="images/weldingUR2020.gif" poster="./images/weldingUR2020.gif" alt="sym" width="90%" style="padding-top:0px;padding-bottom:0px;border-radius:15px;"></video>
       </a></td>
 
       <td width="60%" valign="top">
@@ -267,7 +267,7 @@
         </p>
 
         <div class="paper"  >
-        <a href=" ">github</a> |
+        <!-- <a href=" ">github</a> | -->
         <a href=" ">pdf</a> |
         <a href=" ">video</a>
         </div>
