--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
         IEEE Robotics and Automation Letters (under review) <br>
         </p>
 
-        <div class="paper" id="AeCoM">
+        <div class="paper">
         <!-- <a href=" ">github</a> | -->
         <a href=" ">pdf</a> |
         <a href=" ">video</a>
@@ -160,7 +160,7 @@
         Science Robotics (under review)<br>
         </p>
 
-        <div class="paper" id="AeCoM">
+        <div class="paper">
         <!-- <a href=" ">github</a> | -->
         <a href=" ">pdf</a> |
         <a href=" ">video</a>
@@ -171,7 +171,7 @@
     <!-- AeCoM: An Aerial Continuum Manipulator With IMU-Based Kinematic Modeling and Tendon-Slacking Prevention -->
     <tr>
       <td width="40%" valign="top" align="center"><a href="https://github.com/arclab-hku/AeCoM_Aerial-Continuum-Manipulator">
-      <video playsinline autoplay loop muted src="images/aecom.gif" poster="./images/aecom.gif" alt="sym" width="90%" style="padding-top:0px;padding-bottom:0px;border-radius:15px;"></video>
+      <video playsinline autoplay loop muted src="images/aecom.mp4" poster="./images/loading-icon.gif" alt="sym" width="90%" style="padding-top:0px;padding-bottom:0px;border-radius:15px;"></video>
       </a></td>
 
       <td width="60%" valign="top">
