--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
     <!-- A Tendon-driven Continuum Manipulator with Robust Shape Estimation by Fusion of Multi-IMUs -->
     <tr>
       <td width="40%" valign="top" align="center"><a href=" ">
-      <video playsinline autoplay loop muted src="images/origami_imu.gif" poster="/images/origami_imu.gif" alt="sym" width="90%" style="padding-top:0px;padding-bottom:0px;border-radius:15px;"></video>
+      <video playsinline autoplay loop muted src="images/origami_imu.mp4" poster="/images/loading-icon.gif" alt="sym" width="90%" style="padding-top:0px;padding-bottom:0px;border-radius:15px;"></video>
       </a></td>
 
       <td width="60%" valign="top">
@@ -141,8 +141,8 @@
 
         <div class="paper">
         <!-- <a href=" ">github</a> | -->
-        <a href=" ">pdf</a> |
-        <a href=" ">video</a>
+        <!-- <a href=" ">pdf</a> |
+        <a href=" ">video</a> -->
         </div>
       </td>
     </tr>
@@ -162,8 +162,8 @@
 
         <div class="paper">
         <!-- <a href=" ">github</a> | -->
-        <a href=" ">pdf</a> |
-        <a href=" ">video</a>
+        <!-- <a href=" ">pdf</a> |
+        <a href=" ">video</a> -->
         </div>
       </td>
     </tr>
@@ -204,8 +204,8 @@
 
         <div class="paper" >
         <!-- <a href=" ">github</a> | -->
-        <a href=" ">pdf</a> |
-        <a href=" ">video</a>
+        <a href="A_Motion_decoupled_Aerial_Robotic_Manipulator_for_Better_Inspection.pdf">pdf</a> |
+        <a href="https://www.bilibili.com/video/BV1oM4y1w7ez/?spm_id_from=333.999.0.0">video</a>
         </div>
       </td>
     </tr>
@@ -225,8 +225,8 @@
 
         <div class="paper" >
         <a href="https://github.com/pengrui-rio/welding-robot">github</a> |
-        <a href=" ">pdf</a> |
-        <a href=" ">video</a>
+        <a href="Path_Planning_With_Automatic_Seam_Extraction_Over_Point_Cloud_Models_for_Robotic_Arc_Welding.pdf">pdf</a> |
+        <a href="https://vimeo.com/453908150">video</a>
         </div>
       </td>
     </tr>
@@ -247,8 +247,8 @@
 
         <div class="paper"  >
         <!-- <a href=" ">github</a> | -->
-        <a href=" ">pdf</a> |
-        <a href=" ">video</a>
+        <a href="Fast_Adaptive_Complementary_Filter_for_Quadrotor_Attitude_Estimation_During_Aggressive_Maneuvers.pdf">pdf</a> |
+        <!-- <a href=" ">video</a> -->
         </div>
       </td>
     </tr>
@@ -268,8 +268,8 @@
 
         <div class="paper"  >
         <!-- <a href=" ">github</a> | -->
-        <a href=" ">pdf</a> |
-        <a href=" ">video</a>
+        <a href="A_Point_Cloud-Based_Method_for_Automatic_Groove_Detection_and_Trajectory_Generation_of_Robotic_Arc_Welding_Tasks.pdf">pdf</a> |
+        <a href="https://vimeo.com/371773986">video</a>
         </div>
       </td>
     </tr>
