--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
       border-color: Black;
   }
   </style>
-  <link rel="shortcut icon" href="images/fav_icon.jpg">
+  <link rel="shortcut icon" href="images/fav_icon.png">
   <script type="text/javascript" src="js/hidebib.js"></script>
   <title>Rui Peng</title>
   <meta name="Rui Peng's Homepage" http-equiv="Content-Type" content="Rui Peng's Homepage">
