--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
     </p>
 
     <tr>
-      <td width="30%" valign="top"><img src="images/pengrui.png" width="100%" style="border-radius:15px"> 
+      <td width="30%" valign="top"><img src="images/pengrui.jpg" width="100%" style="border-radius:15px"> 
       <p align=center>
         | <a href="data/pengrui_CV.pdf">CV</a> |
         <a href="mailto:pengrui-rio@connect.hku.hk">Email</a> |
