--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
         <p><a href=" ">
         <heading>A Tendon-driven Continuum Manipulator with Robust Shape Estimation by Fusion of Multi-IMUs</heading></a><br>
         <strong>Rui Peng</strong>, Yu Wang, Peng Lu<br>
-        IEEE Robotics and Automation Letters (under review) <br>
+        IEEE Robotics and Automation Letters - 2024 <br>
         </p>
 
         <div class="paper">
