--- a/index.html
+++ b/index.html
@@ -134,15 +134,15 @@
 
       <td width="60%" valign="top">
         <p><a href=" ">
-        <heading>A Tendon-driven Continuum Manipulator with Robust Shape Estimation by Fusion of Multi-IMUs</heading></a><br>
+        <heading>A Tendon-driven Continuum Manipulator with Robust Shape Estimation by Multiple IMUs</heading></a><br>
         <strong>Rui Peng</strong>, Yu Wang, Peng Lu<br>
         IEEE Robotics and Automation Letters - 2024 <br>
         </p>
 
         <div class="paper">
         <!-- <a href=" ">github</a> | -->
-        <!-- <a href=" ">pdf</a> |
-        <a href=" ">video</a> -->
+        <a href="data/A_Tendon_driven_Continuum_Manipulator_with_Robust_Shape_Estimation_by_Multiple_IMUs.pdf">pdf</a> |
+        <a href="https://www.bilibili.com/video/BV1yp421d7J2">video</a>
         </div>
       </td>
     </tr>
@@ -247,7 +247,7 @@
 
         <div class="paper"  >
         <!-- <a href=" ">github</a> | -->
-        <a href="data/Fast_Adaptive_Complementary_Filter_for_Quadrotor_Attitude_Estimation_During_Aggressive_Maneuvers.pdf">pdf</a> |
+        <a href="data/Fast_Adaptive_Complementary_Filter_for_Quadrotor_Attitude_Estimation_During_Aggressive_Maneuvers.pdf">pdf</a>  
         <!-- <a href=" ">video</a> -->
         </div>
       </td>
