--- a/index.html
+++ b/index.html
@@ -170,12 +170,12 @@
     
     <!-- AeCoM: An Aerial Continuum Manipulator With IMU-Based Kinematic Modeling and Tendon-Slacking Prevention -->
     <tr>
-      <td width="40%" valign="top" align="center"><a href="https://github.com/arclab-hku/AeCoM_Aerial-Continuum-Manipulator">
+      <td width="40%" valign="top" align="center"><a href="https://ieeexplore.ieee.org/document/10081306">
       <video playsinline autoplay loop muted src="images/aecom.mp4" poster="./images/loading-icon.gif" alt="sym" width="90%" style="padding-top:0px;padding-bottom:0px;border-radius:15px;"></video>
       </a></td>
 
       <td width="60%" valign="top">
-        <p><a href="https://github.com/arclab-hku/AeCoM_Aerial-Continuum-Manipulator" id="AeCoM">
+        <p><a href="https://ieeexplore.ieee.org/document/10081306" id="AeCoM">
         <heading>AeCoM: An Aerial Continuum Manipulator With IMU-Based Kinematic Modeling and Tendon-Slacking Prevention</heading></a><br>
         <strong>Rui Peng</strong>, Zehao Wang, Peng Lu<br>
         IEEE Transactions on Systems, Man, and Cybernetics: Systems - 2023<br>
@@ -191,12 +191,12 @@
   
     <!-- A Motion decoupled Aerial Robotic Manipulator for Better Inspection -->
     <tr>
-      <td width="40%" valign="top" align="center"><a href=" ">
+      <td width="40%" valign="top" align="center"><a href="https://ieeexplore.ieee.org/document/9636765">
       <video playsinline autoplay loop muted src="images/iros2021.mp4" poster="./images/loading-icon.gif" alt="sym" width="90%" style="padding-top:0px;padding-bottom:0px;border-radius:15px;"></video>
       </a></td>
 
       <td width="60%" valign="top">
-        <p><a href=" " >
+        <p><a href="https://ieeexplore.ieee.org/document/9636765" >
         <heading>A Motion decoupled Aerial Robotic Manipulator for Better Inspection</heading></a><br>
         <strong>Rui Peng</strong>, Xianda Chen, Peng Lu<br>
         IEEE/RSJ International Conference on Intelligent Robots and Systems (IROS) - 2021<br>
@@ -212,12 +212,12 @@
 
     <!-- Path Planning With Automatic Seam Extraction Over Point Cloud Models for Robotic Arc Welding -->
     <tr>
-      <td width="40%" valign="top" align="center"><a href="https://github.com/pengrui-rio/welding-robot">
+      <td width="40%" valign="top" align="center"><a href="https://ieeexplore.ieee.org/document/9394722">
       <video playsinline autoplay loop muted src="images/welding_tube.gif" poster="./images/welding_tube.gif" alt="sym" width="90%" style="padding-top:0px;padding-bottom:0px;border-radius:15px;"></video>
       </a></td>
 
       <td width="60%" valign="top">
-        <p><a href="https://github.com/pengrui-rio/welding-robot"  >
+        <p><a href="https://ieeexplore.ieee.org/document/9394722"  >
         <heading>Path Planning With Automatic Seam Extraction Over Point Cloud Models for Robotic Arc Welding</heading></a><br>
         <strong>Rui Peng</strong>, P. Zhou, M. Xu, V. Wu and D. Navarro-Alarcon<br>
         IEEE Robotics and Automation Letters - 2021<br>
@@ -234,12 +234,12 @@
 
     <!-- Fast Adaptive Complementary Filter for Quadrotor Attitude Estimation During Aggressive Maneuvers -->
     <tr>
-      <td width="40%" valign="top" align="center"><a href="https://github.com/pengrui-rio/welding-robot">
+      <td width="40%" valign="top" align="center"><a href="https://ieeexplore.ieee.org/document/9476796">
       <video playsinline autoplay loop muted src="images/icuas2021.gif" poster="./images/icuas2021.gif" alt="sym" width="90%" style="padding-top:0px;padding-bottom:0px;border-radius:15px;"></video>
       </a></td>
 
       <td width="60%" valign="top">
-        <p><a href="https://github.com/pengrui-rio/welding-robot"  >
+        <p><a href="https://ieeexplore.ieee.org/document/9476796"  >
         <heading>Fast Adaptive Complementary Filter for Quadrotor Attitude Estimation During Aggressive Maneuvers</heading></a><br>
         <strong>Rui Peng</strong>, Peng Lu<br>
         International Conference on Unmanned Aircraft Systems (ICUAS) - 2021<br>
@@ -255,12 +255,12 @@
 
     <!-- A Point Cloud-Based Method for Automatic Groove Detection and Trajectory Generation of Robotic Arc Welding Tasks -->
     <tr>
-      <td width="40%" valign="top" align="center"><a href="https://github.com/pengrui-rio/welding-robot">
+      <td width="40%" valign="top" align="center"><a href="https://ieeexplore.ieee.org/document/9144861">
       <video playsinline autoplay loop muted src="images/weldingUR2020.gif" poster="./images/weldingUR2020.gif" alt="sym" width="90%" style="padding-top:0px;padding-bottom:0px;border-radius:15px;"></video>
       </a></td>
 
       <td width="60%" valign="top">
-        <p><a href="https://github.com/pengrui-rio/welding-robot"  >
+        <p><a href="https://ieeexplore.ieee.org/document/9144861"  >
         <heading>A Point Cloud-Based Method for Automatic Groove Detection and Trajectory Generation of Robotic Arc Welding Tasks</heading></a><br>
         <strong>Rui Peng</strong>, D. Navarro-Alarcon, V. Wu and W. Yang<br>
         International Conference on Ubiquitous Robots (UR) - 2020<br>
