--- a/index.html
+++ b/index.html
@@ -123,8 +123,29 @@
     <tr><td><sectionheading>&nbsp;&nbsp;Publications</sectionheading></td></tr>
   </table>
 
-
+  
   <table width="100%" align="center" border="0" cellspacing="0" cellpadding="15">
+
+    <!-- Numerical Optimization Based Constant Curvature Kinematics with Attitude Control for Flexible Manipulation of Continuum Robots -->
+    <tr>
+      <td width="40%" valign="top" align="center"><a href=" ">
+      <video playsinline autoplay loop muted src="images/origami_interaction.mp4" poster="/images/loading-icon.gif" alt="sym" width="90%" style="padding-top:0px;padding-bottom:0px;border-radius:15px;"></video>
+      </a></td>
+
+      <td width="60%" valign="top">
+        <p><a href=" ">
+        <heading>Numerical Optimization Based Constant Curvature Kinematics with Attitude Control for Flexible Manipulation of Continuum Robots</heading></a><br>
+        <strong>Rui Peng</strong>, Yu Wang, Peng Lu<br>
+        IEEE/ASME Transactions on Mechatronics (under review) <br>
+        </p>
+
+        <div class="paper">
+        <!-- <a href=" ">github</a> | -->
+        <!-- <a href="data/A_Tendon_driven_Continuum_Manipulator_with_Robust_Shape_Estimation_by_Multiple_IMUs.pdf">pdf</a> |
+        <a href="https://www.bilibili.com/video/BV1yp421d7J2">video</a> -->
+        </div>
+      </td>
+    </tr>
 
     <!-- A Tendon-driven Continuum Manipulator with Robust Shape Estimation by Fusion of Multi-IMUs -->
     <tr>
