--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
 
     <!-- A Tendon-driven Continuum Manipulator with Robust Shape Estimation by Fusion of Multi-IMUs -->
     <tr>
-      <td width="40%" valign="top" align="center"><a href=" ">
+      <td width="40%" valign="top" align="center"><a href="https://ieeexplore.ieee.org/document/10427985">
       <video playsinline autoplay loop muted src="images/origami_imu.mp4" poster="/images/loading-icon.gif" alt="sym" width="90%" style="padding-top:0px;padding-bottom:0px;border-radius:15px;"></video>
       </a></td>
 
