--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
       </a></td>
 
       <td width="60%" valign="top">
-        <p><a href=" ">
+        <p><a href="https://ieeexplore.ieee.org/document/10427985">
         <heading>A Tendon-driven Continuum Manipulator with Robust Shape Estimation by Multiple IMUs</heading></a><br>
         <strong>Rui Peng</strong>, Yu Wang, Peng Lu<br>
         IEEE Robotics and Automation Letters - 2024 <br>
