--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
         <p><a href=" ">
         <heading>Flying Elephant Trunk: A dexterous and compliant aerial manipulator for complex cluttered and constrained environments</heading></a><br>
         <strong>Rui Peng</strong>, Yu Wang, Peng Lu<br>
-        Nature Communications (under review - second round)<br>
+        Nature Communications (under review - third round)<br>
         </p>
 
         <div class="paper">
