--- a/index.html
+++ b/index.html
@@ -110,8 +110,7 @@
         <!-- From 11/2023, I started entrepreneurship: Flexcom Tech Limited, for facilitating flexible manipulation in industry.       -->
       </p>
       <p>
-        About my leisure life, I am a basketball player and self-weight fitness trainer, for which I upload my training vlogs in  <a href="https://space.bilibili.com/607205349">bilibili</a>. 
-        Also, I love music, movies, and photography.
+        About my leisure life, I am a basketball player and self-weight fitness trainer. Also, I love music, movies.
       </p>
       </td>
     </tr>
