--- a/index.html
+++ b/index.html
@@ -239,7 +239,7 @@
       <td width="60%" valign="top">
         <p><a href="https://ieeexplore.ieee.org/document/9394722"  >
         <heading>Path Planning With Automatic Seam Extraction Over Point Cloud Models for Robotic Arc Welding</heading></a><br>
-        <strong>Rui Peng</strong>，P. Zhou, M. Xu, V. Wu and D. Navarro-Alarcon<br>
+        <strong>Rui Peng</strong>, P. Zhou, M. Xu, V. Wu and D. Navarro-Alarcon<br>
         IEEE Robotics and Automation Letters - 2021<br>
         </p>
 
