--- a/index.html
+++ b/index.html
@@ -125,6 +125,27 @@
   
   <table width="100%" align="center" border="0" cellspacing="0" cellpadding="15">
 
+    <!-- A dexterous and compliant aerial manipulator for cluttered and constrained environments -->
+    <tr>
+      <td width="40%" valign="top" align="center"><a href=" ">
+      <video playsinline autoplay loop muted src="images/flying_elephant.gif" poster="/images/flying_elephant.gif" alt="sym" width="90%" style="padding-top:0px;padding-bottom:0px;border-radius:15px;"></video>
+      </a></td>
+
+      <td width="60%" valign="top">
+        <p><a href=" ">
+        <heading> A dexterous and compliant aerial manipulator for cluttered and constrained environments </heading></a><br>
+        <strong>Rui Peng</strong>, Yu Wang, Minghao Lu, and Peng Lu<br>
+        Nature Communications 2024 (in press)  <br>
+        </p>
+
+        <div class="paper">
+        <!-- <a href=" ">github</a> | -->
+        <!-- <a href=" ">pdf</a> |
+        <a href=" ">video</a> -->
+        </div>
+      </td>
+    </tr>
+    
     <!-- Numerical Optimization Based Constant Curvature Kinematics with Attitude Control for Flexible Manipulation of Continuum Robots -->
     <tr>
       <td width="40%" valign="top" align="center"><a href=" ">
@@ -167,26 +188,6 @@
       </td>
     </tr>
 
-    <!-- Flying Elephant Trunk: A dexterous and compliant aerial manipulator for complex cluttered and constrained environments -->
-    <tr>
-      <td width="40%" valign="top" align="center"><a href=" ">
-      <video playsinline autoplay loop muted src="images/flying_elephant.gif" poster="/images/flying_elephant.gif" alt="sym" width="90%" style="padding-top:0px;padding-bottom:0px;border-radius:15px;"></video>
-      </a></td>
-
-      <td width="60%" valign="top">
-        <p><a href=" ">
-        <heading>Flying Elephant Trunk: A dexterous and compliant aerial manipulator for complex cluttered and constrained environments</heading></a><br>
-        <strong>Rui Peng</strong>, Yu Wang, Peng Lu<br>
-        Nature Communications (in press)  <br>
-        </p>
-
-        <div class="paper">
-        <!-- <a href=" ">github</a> | -->
-        <!-- <a href=" ">pdf</a> |
-        <a href=" ">video</a> -->
-        </div>
-      </td>
-    </tr>
     
     <!-- AeCoM: An Aerial Continuum Manipulator With IMU-Based Kinematic Modeling and Tendon-Slacking Prevention -->
     <tr>
