--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
 
       <td width="60%" valign="top">
         <p><a href=" ">
-        <heading> A dexterous and compliant aerial manipulator for cluttered and constrained environments </heading></a><br>
+        <heading> A dexterous and compliant aerial continuum manipulator for cluttered and constrained environments </heading></a><br>
         <strong>Rui Peng</strong>, Yu Wang, Minghao Lu, and Peng Lu<br>
         Nature Communications 2024 (in press)  <br>
         </p>
