--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
 
     <!-- A dexterous and compliant aerial manipulator for cluttered and constrained environments -->
     <tr>
-      <td width="40%" valign="top" align="center"><a href=" ">
+      <td width="40%" valign="top" align="center"><a href="https://doi.org/10.1038/s41467-024-55157-2">
       <video playsinline autoplay loop muted src="images/flying_elephant.gif" poster="/images/flying_elephant.gif" alt="sym" width="90%" style="padding-top:0px;padding-bottom:0px;border-radius:15px;"></video>
       </a></td>
 
@@ -139,7 +139,7 @@
         </p>
 
         <div class="paper">
-        <!-- <a href=" ">github</a> | -->
+        <a href="https://github.com/arclab-hku/AET">github</a> |
         <!-- <a href=" ">pdf</a> |
         <a href=" ">video</a> -->
         </div>
