--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
       </a></td>
 
       <td width="60%" valign="top">
-        <p><a href=" ">
+        <p><a href="https://doi.org/10.1038/s41467-024-55157-2">
         <heading> A dexterous and compliant aerial continuum manipulator for cluttered and constrained environments </heading></a><br>
         <strong>Rui Peng</strong>, Yu Wang, Minghao Lu, and Peng Lu<br>
         Nature Communications 2024 (in press)  <br>
