--- a/index.html
+++ b/index.html
@@ -135,13 +135,13 @@
         <p><a href="https://doi.org/10.1038/s41467-024-55157-2">
         <heading> A dexterous and compliant aerial continuum manipulator for cluttered and constrained environments </heading></a><br>
         <strong>Rui Peng</strong>, Yu Wang, Minghao Lu, and Peng Lu<br>
-        Nature Communications 2024 (in press)  <br>
+        Nature Communications 2025 <br>
         </p>
 
         <div class="paper">
         <a href="https://github.com/arclab-hku/AET">github</a> |
-        <!-- <a href=" ">pdf</a> |
-        <a href=" ">video</a> -->
+        <a href="data/AET.pdf">pdf</a> |
+        <a href=" ">video</a>
         </div>
       </td>
     </tr>
