--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
         <div class="paper">
         <a href="https://github.com/arclab-hku/AET">github</a> |
         <a href="data/AET.pdf">pdf</a> |
-        <a href=" ">video</a>
+        <a href="https://www.bilibili.com/video/BV1k9fGYhE2Z">video</a>
         </div>
       </td>
     </tr>
