--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
         <br/>
         | <a href="https://github.com/pengrui-rio">Github</a> | 
         <a href="https://orcid.org/0000-0002-8718-0619">ORCID</a> | 
-        <!-- <a href="https://www.linkedin.com/in/pengrui">LinkedIn</a> | -->
+        <a href="https://www.linkedin.com/in/pengrui-rio/">LinkedIn</a> |
       </p>
       </td>
 
