--- a/index.html
+++ b/index.html
@@ -106,7 +106,8 @@
         My supervisor is Prof. Peng Lu, who is leading the <a href="https://arclab.hku.hk/">Adaptive Robotic Controls Lab (ArcLab)</a>. 
       </p>
       <p>
-        I am doing research on aerial continuum manipulation, and origami robotic manipulators, with mechanical design, modeling, control, and motion planning.
+        I am doing research on aerial continuum manipulation, and origami robotic manipulators, with mechanical design, modeling, control, and motion planning. 
+        If interests, please kindly contact me: pengrui-rio@connect.hku.hk 
       </p>
       <p>
         About my leisure life, I am a basketball player and self-weight fitness trainer. Also, I love music, movies.
