--- a/index.html
+++ b/index.html
@@ -102,17 +102,10 @@
 
       <td width="70%" valign="top" align="justify">
       <p>
-        Rui Peng is a PhD graduate in robotics at <a href="https://www.mech.hku.hk/">The Department of Mechanical Engineering, The University of Hong Kong</a>.
-        My supervisor is Prof. Peng Lu, who is leading the <a href="https://arclab.hku.hk/">Adaptive Robotic Controls Lab (ArcLab)</a>. 
+        Doctor Octopus
       </p>
-      <p>
-        I am doing research on aerial continuum manipulation, and origami robotic manipulators, with mechanical design, modeling, control, and motion planning. 
-        If interests, please kindly contact me: pengrui-rio@connect.hku.hk 
-      </p>
-      <p>
-        About my leisure life, I am a basketball player and self-weight fitness trainer. Also, I love music, movies.
-      </p>
-      </td>
+
+    </td>
     </tr>
   </table>
 
