--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
 
       <td width="70%" valign="top" align="justify">
       <p>
-        Doctor Octopus
+        Doctor Octopus 
       </p>
 
     </td>
@@ -148,14 +148,14 @@
       <td width="60%" valign="top">
         <p><a href=" ">
         <heading>Numerical Optimization Based Constant Curvature Kinematics with Attitude Control for Flexible Manipulation of Continuum Robots</heading></a><br>
-        <strong>Rui Peng</strong>, Yu Wang, Peng Lu<br>
-        IEEE/ASME Transactions on Mechatronics (under review) <br>
+        <strong>Rui Peng</strong>, Ping Deng, Duo Tang, Peng Lu<br>
+        IEEE/RSJ International Conference on Intelligent Robots and Systems (IROS) - 2025 <br>
         </p>
 
         <div class="paper">
         <!-- <a href=" ">github</a> | -->
-        <!-- <a href="data/A_Tendon_driven_Continuum_Manipulator_with_Robust_Shape_Estimation_by_Multiple_IMUs.pdf">pdf</a> |
-        <a href="https://www.bilibili.com/video/BV1yp421d7J2">video</a> -->
+        <a href="data/IROS2025_Continuum_Robots_final.pdf">pdf</a> |
+        <a href="https://www.bilibili.com/video/BV1J1NhzDEjm">video</a>
         </div>
       </td>
     </tr>
