--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
 
       <td width="60%" valign="top">
         <p><a href=" ">
-        <heading>Numerical Optimization Based Constant Curvature Kinematics with Attitude Control for Flexible Manipulation of Continuum Robots</heading></a><br>
+        <heading> Numerical Optimization-based Kinematics with Pose Tracking Control for Continuum Robots </heading></a><br>
         <strong>Rui Peng</strong>, Ping Deng, Duo Tang, Peng Lu<br>
         IEEE/RSJ International Conference on Intelligent Robots and Systems (IROS) - 2025 <br>
         </p>
