--- a/index.html
+++ b/index.html
@@ -112,16 +112,16 @@
         Hong Kong 2526 Junior Research Fellowship Scheme | Awardee
       </p>
       <p>
-        The University of Hong Kong, Mechanical Engineering 2020-2024 | Robotics PhD
+        HKU, Mechanical Engineering 2020-2024 | Robotics PhD
       </p>
       <p>
-        Hong Kong Polytechnic University, Mechanical Engineering 2019-2020 | Robotics RA
+        POLYU, Mechanical Engineering 2019-2020 | Robotics RA
       </p>
       <p>
-        Wuhan University, Electrical Engineering 2018-2020 | Master
+        WHU, Electrical Engineering 2018-2020 | Master
       </p>
       <p>
-        Wuhan University, Electrical Engineering 2014-2018 | Bachelor
+        WHU, Electrical Engineering 2014-2018 | Bachelor
       </p>
 
     </td>
