--- a/index.html
+++ b/index.html
@@ -106,22 +106,22 @@
       </p>
 
       <p>
-        Feagine Tech Limited, 2025- | Founder&CEO
+        Feagine Tech Limited, 2025- |  <strong> Founder&CEO </strong> 
       </p>
       <p>
-        Hong Kong 2526 Junior Research Fellowship Scheme | Awardee
+        Hong Kong 2526 Junior Research Fellowship Scheme | <strong> Awardee </strong>
       </p>
       <p>
-        HKU, Mechanical Engineering 2020-2024 | Robotics PhD
+        HKU, Mechanical Engineering 2020-2024 | <strong> Robotics PhD </strong>
       </p>
       <p>
-        POLYU, Mechanical Engineering 2019-2020 | Robotics RA
+        POLYU, Mechanical Engineering 2019-2020 | <strong> Robotics RA </strong>
       </p>
       <p>
-        WHU, Electrical Engineering 2018-2020 | Master
+        WHU, Electrical Engineering 2018-2020 | <strong> Master </strong>
       </p>
       <p>
-        WHU, Electrical Engineering 2014-2018 | Bachelor
+        WHU, Electrical Engineering 2014-2018 | <strong>  Bachelor </strong>
       </p>
 
     </td>
