--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
       <td width="60%" valign="top">
         <p><a href="https://doi.org/10.1038/s41467-024-55157-2">
         <heading> A dexterous and compliant aerial continuum manipulator for cluttered and constrained environments </heading></a><br>
-        <strong>Rui Peng</strong>, Yu Wang, Minghao Lu, and Peng Lu<br>
+        <strong>Rui Peng</strong>, Yu Wang, Minghao Lu<br>
         Nature Communications 2025 <br>
         </p>
 
@@ -167,7 +167,7 @@
       <td width="60%" valign="top">
         <p><a href=" ">
         <heading> Numerical Optimization-based Kinematics with Pose Tracking Control for Continuum Robots </heading></a><br>
-        <strong>Rui Peng</strong>, Ping Deng, Duo Tang, Peng Lu<br>
+        <strong>Rui Peng</strong>, Ping Deng, Duo Tang<br>
         IEEE/RSJ International Conference on Intelligent Robots and Systems (IROS) - 2025 <br>
         </p>
 
@@ -188,7 +188,7 @@
       <td width="60%" valign="top">
         <p><a href="https://ieeexplore.ieee.org/document/10427985">
         <heading>A Tendon-driven Continuum Manipulator with Robust Shape Estimation by Multiple IMUs</heading></a><br>
-        <strong>Rui Peng</strong>, Yu Wang, Peng Lu<br>
+        <strong>Rui Peng</strong>, Yu Wang<br>
         IEEE Robotics and Automation Letters - 2024 <br>
         </p>
 
@@ -210,7 +210,7 @@
       <td width="60%" valign="top">
         <p><a href="https://ieeexplore.ieee.org/document/10081306" id="AeCoM">
         <heading>AeCoM: An Aerial Continuum Manipulator With IMU-Based Kinematic Modeling and Tendon-Slacking Prevention</heading></a><br>
-        <strong>Rui Peng</strong>, Zehao Wang, Peng Lu<br>
+        <strong>Rui Peng</strong>, Zehao Wang<br>
         IEEE Transactions on Systems, Man, and Cybernetics: Systems - 2023<br>
         </p>
 
@@ -231,7 +231,7 @@
       <td width="60%" valign="top">
         <p><a href="https://ieeexplore.ieee.org/document/9636765" >
         <heading>A Motion decoupled Aerial Robotic Manipulator for Better Inspection</heading></a><br>
-        <strong>Rui Peng</strong>, Xianda Chen, Peng Lu<br>
+        <strong>Rui Peng</strong>, Xianda Chen<br>
         IEEE/RSJ International Conference on Intelligent Robots and Systems (IROS) - 2021<br>
         </p>
 
@@ -274,7 +274,7 @@
       <td width="60%" valign="top">
         <p><a href="https://ieeexplore.ieee.org/document/9476796"  >
         <heading>Fast Adaptive Complementary Filter for Quadrotor Attitude Estimation During Aggressive Maneuvers</heading></a><br>
-        <strong>Rui Peng</strong>, Peng Lu<br>
+        <strong>Rui Peng</strong><br>
         International Conference on Unmanned Aircraft Systems (ICUAS) - 2021<br>
         </p>
 
