--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
       </a></td>
 
       <td width="60%" valign="top">
-        <p><a href=" ">
+        <p><a href="https://ieeexplore.ieee.org/document/11246804">
         <heading> Numerical Optimization-based Kinematics with Pose Tracking Control for Continuum Robots </heading></a><br>
         <strong>Rui Peng</strong>, Ping Deng, Duo Tang<br>
         IEEE/RSJ International Conference on Intelligent Robots and Systems (IROS) - 2025 <br>
